--- a/app/src/main/res/layout/activity_prueba_volly.xml
+++ b/app/src/main/res/layout/activity_prueba_volly.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,10 +9,6 @@
     android:layout_margin="15dp"
     tools:context=".pruebaVolly">
 
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -61,7 +57,6 @@
         android:textColor="@color/black"/>
 
 
-    </ScrollView>
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn"
         android:layout_width="wrap_content"
@@ -98,4 +93,4 @@
             android:textColor="@color/black" />
 
     </LinearLayout>
-</LinearLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
